feat: Implementa arquitetura web-only com MySQL e Repository pattern
- Remove aplicações console (app.ts, app-db.ts, main.ts)
- Implementa integração completa com MySQL
- Adiciona Repository pattern correto com retorno de objetos Model
- Migra Product.js para Product.ts com tipagem TypeScript
- Corrige cálculo de desconto (soma simples ao invés de composta)
- Adiciona interface web moderna com async/await
- Adiciona documentação completa (README-DATABASE.md, CORRECTIONS-LOG.md)
- Implementa ProductRepository, ProductService e ProductController
- Adiciona validação e tratamento de erros
- Interface responsiva com feedback visual para usuário

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,9 @@
 
                 <!-- Lista de produtos -->
                 <div class="products-container">
+                    <div class="products-header">
+                        <span id="produtos-count" class="product-count">0 produto(s) encontrado(s)</span>
+                    </div>
                     <div id="produtos-lista" class="products-grid">
                         <!-- Produtos serão inseridos aqui -->
                     </div>
