--- a/public/index-clean.html
+++ b/public/index-clean.html
@@ -253,13 +253,13 @@
             <form id="form-produto" class="modal-body">
                 <div class="form-group">
                     <label class="form-label">Nome do Produto *</label>
-                    <input type="text" id="produto-nome" name="nome" class="input" required 
+                    <input type="text" id="produto-nome" class="input" required 
                            placeholder="Digite o nome do produto">
                 </div>
                 
                 <div class="form-group">
                     <label class="form-label">Categoria *</label>
-                    <select id="produto-categoria" name="categoria" class="input" required>
+                    <select id="produto-categoria" class="input" required>
                         <option value="">Selecione uma categoria</option>
                         <option value="eletronicos">⚡ Eletrônicos</option>
                         <option value="livros">📚 Livros</option>
@@ -269,7 +269,7 @@
                 
                 <div class="form-group">
                     <label class="form-label">Preço (R$) *</label>
-                    <input type="number" id="produto-preco" name="preco" class="input" required 
+                    <input type="number" id="produto-preco" class="input" required 
                            min="0.01" step="0.01" placeholder="0,00">
                 </div>
             </form>
