fix: Corrige ProductFilterService.ts e restaura filtragem backend com Decorator Pattern

--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,17 @@
                         </button>
                     </div>
                 </div>
+                
+                <!-- Feedback de filtros ativos (Padrão Decorator) -->
+                <div class="filter-feedback-container">
+                    <div id="filter-feedback" class="filter-feedback filter-inactive">
+                        📋 Mostrando todos os produtos
+                    </div>
+                    <button class="btn btn-sm btn-info" id="btn-only-discounts" style="display: none;">
+                        <i class="fas fa-percentage"></i>
+                        Apenas com desconto
+                    </button>
+                </div>
 
                 <!-- Lista de produtos -->
                 <div id="produtos-lista" class="products-grid">
